# block-extract

./: Cargo.toml  README.md  extract.sh
data/: 0x000001.json  0x000002.json  0x000003.json  0x000004.json  0x000005.json  0x000006.json  0x000007.json  0x000008.json  0x000009.json  0x00000a.json  0x00000b.json  0x00000c.json  0x00000d.json  0x00000e.json  0x00000f.json  0x000010.json  0x000011.json  0x000012.json  0x000013.json  0x000014.json  0x000015.json  0x000016.json  0x000017.json  0x000018.json  0x000019.json  0x00001a.json  0x00001b.json  0x00001c.json  0x00001d.json  0x00001e.json  0x00001f.json  0x000020.json  0x000021.json  0x000022.json  0x000023.json  0x000024.json  0x000025.json  0x000026.json  0x000027.json  0x000028.json  (+604 more)
src/: main.rs
