[package]
name = "block-extract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.127"
serde_derive = "1.0.127"
tokio = { version = "1.9.0", features = ["full"] }
