[package]
edition = "2018"
name = "block-extract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
json = "0.12.4"
reqwest = {version = "0.11.4", features = ["blocking", "json"]}
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
tokio = {version = "1.9.0", features = ["full"]}
